aws_vpc_terraform/modules/sg/securitygroups.tf
############################################
# Security Group for public instances
############################################
resource "aws_security_group" "webSecurityGroup" {
  name        = "webSecurityGroup"
  description = "Allow web traffic"
 
  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
 ingress {
    description = "TLS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  vpc_id     = "${var.vpc_id}"
}

############################################
# Security Group for private instances
############################################

resource "aws_security_group" "dbSecurityGroup" {
  name        = "dbSecurityGroup"
  description = "Allow db traffic"

  ingress {
    description = "TLS from VPC"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  vpc_id     = "${var.vpc_id}"
}
